# cmake-matlab-toolbox-template

./: CMakeLists.txt  README.md
cmake/: FindMATLAB.cmake  FindMatlabMex.cmake  UseMatlabMex.cmake
src/: CMakeLists.txt  MyLibrary.c  func1.c  func1.m  func2.m
